log
Thu 25 Apr 2024 12:23:07 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|6
total_score: 10/70
b5db796
Thu 25 Apr 2024 12:28:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1278acc
Thu 25 Apr 2024 12:28:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
336c327
Thu 25 Apr 2024 12:37:48 AM UTC: 
 hashmap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:67: error: implicit declaration of function ‘is_eqaul’; did you mean ‘is_equal’? [-Werror=implicit-function-declaration]
   53 |         if(map->buckets[i]!=NULL && map->buckets[i]->key!=NULL && is_eqaul(map->buckets[i]->key,key))
      |                                                                   ^~~~~~~~
      |                                                                   is_equal
cc1: all warnings being treated as errors
Compilation failed
025f9df
Thu 25 Apr 2024 12:38:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2107d07
